--- a/applications/dashboard/scss/new-features/_spoiler.scss
+++ b/applications/dashboard/scss/new-features/_spoiler.scss
@@ -44,6 +44,7 @@ $buttonSpoiler: (
 
     .spoiler-content {
         max-height: 0;
+        display: none;
     }
 
     &.isShowingSpoiler {
